--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,11 @@
         <hr />
 
         <form>
+            Email   :<input type='email' name='Nombre' class='form-control' autoComplete='off' id="email"/>
             Nombre  :<input type='text' name='Nombre' class='form-control' autoComplete='off' id="nombre"/>
+            Apellido:<input type='text' name='Nombre' class='form-control' autoComplete='off' id="apellido"/>
+            Edad:<input type='text' name='Nombre' class='form-control' autoComplete='off' id="edad"/>
+            Alias:<input type='text' name='Nombre' class='form-control' autoComplete='off' id="alias"/>
             Mensaje :<input type='text' name='Texto' class='form-control'  autoComplete='off' id="texto"/>
         </form>
 
